--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         </div>
 
         <div id="gameBoard">
-            <div>X</div>
-            <div>O</div>
-            <div>X</div>
-            <div>O</div>
-            <div>X</div>
-            <div>O</div>
-            <div>X</div>
-            <div>O</div>
-            <div>X</div>
+            <div class="sections section-1"></div>
+            <div class="sections section-2"></div>
+            <div class="sections section-3"></div>
+            <div class="sections section-4"></div>
+            <div class="sections section-5"></div>
+            <div class="sections section-6"></div>
+            <div class="sections section-7"></div>
+            <div class="sections section-8"></div>
+            <div class="sections section-9"></div>
         </div>
 
         <div id="footerOutline">
