Add id to board sections

--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         </div>
 
         <div id="gameBoard">
-            <div class="sections section-1"></div>
-            <div class="sections section-2"></div>
-            <div class="sections section-3"></div>
-            <div class="sections section-4"></div>
-            <div class="sections section-5"></div>
-            <div class="sections section-6"></div>
-            <div class="sections section-7"></div>
-            <div class="sections section-8"></div>
-            <div class="sections section-9"></div>
+            <div class="sections" id="0"></div>
+            <div class="sections" id="1"></div>
+            <div class="sections" id="2"></div>
+            <div class="sections" id="3"></div>
+            <div class="sections" id="4"></div>
+            <div class="sections" id="5"></div>
+            <div class="sections" id="6"></div>
+            <div class="sections" id="7"></div>
+            <div class="sections" id="8"></div>
         </div>
 
         <div id="footerOutline">
