Add popup screen

--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
                 </div>
             </div>
 
+            <div class="start-Popup">
+                Start Game
+                <button type="button" class="start-Button">Okay!</button>
+            </div>
+
 
         </div>
     </div>
