Fix popup naming

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
                 </div>
             </div>
 
-            <div class="start-Popup">
+            <div id="start-Popup">
                 Start Game
-                <button type="button" class="start-Button">Okay!</button>
+                <button type="button" id="start-Button">Okay!</button>
             </div>
 
 
