--- a/index.html
+++ b/index.html
@@ -31,20 +31,21 @@
             <div id="footerGrid">
                 <div id="playerOneContainer">
                     <p id="playerOne">Player 1 (X)</p>
-                    <p id="playerOneScore">0</p>
+                    <p id="playerOneScore"></p>
                 </div>
 
                 <div id="tieContainer">
                     <p id="tie">Tie</p>
-                    <p id="tieScore">0</p>
+                    <p id="tieScore"></p>
                 </div>
 
                 <div id="playerTwoContainer">
                     <p id="playerTwo">Player 2 (O)</p>
-                    <p id="playerTwoScore">0</p>
+                    <p id="playerTwoScore"></p>
                 </div>
 
                 <div id="resetContainer">
+                    <button type="button" id="rematch"> rematch </button>
                     <button type="button" id="reset"> reset </button>
                 </div>
     
