--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
             <div id="footerGrid">
                 <div id="playerOneContainer">
                     <p id="playerOne">Player 1 (X)</p>
-                    <p id="playerOneScore"></p>
+                    <p id="playerOneScore">0</p>
                 </div>
 
                 <div id="tieContainer">
                     <p id="tie">Tie</p>
-                    <p id="tieScore"></p>
+                    <p id="tieScore">0</p>
                 </div>
 
                 <div id="playerTwoContainer">
                     <p id="playerTwo">Player 2 (O)</p>
-                    <p id="playerTwoScore"></p>
+                    <p id="playerTwoScore">0</p>
                 </div>
 
                 <div id="resetContainer">
